[metadata]
name = kgviz_model
url = https://github.com/berkeleybop/kgviz-model
author = Chris Mungall
author_email = cjmungall@lbl.gov
summary = Configuration for visualization of KGs and Ontologies
description = Configuration for visualization of KGs and Ontologies
long_description = Configuration for visualization of KGs and Ontologies
home_page = https://berkeleybop.github.io/kgviz_model
license = CC0 1.0 Universal
python_requires = >=3.7
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = 
    linkml
    LOD
    Modeling
    Linked open data
    model
    ontologies
    visualization
    stylesheets

[options]
include_package_data = True

[files]
packages =
    kgviz_model

data-files = kgviz_model/model = kgviz_model/model/*
    kgviz_model/jsonld_context = kgviz_model/jsonld_context/*
    kgviz_model/json_schema = kgviz_model/json_schema/*
    kgviz_model/model = kgviz_model/model/*
    kgviz_model/sqlddl = kgviz_model/sqlddl/*
    kgviz_model/shex = kgviz_model/shex/*
    kgviz_model/owl = kgviz_model/owl/*
    kgviz_model/rdf = kgviz_model/rdf/*


